--- a/Programm.css
+++ b/Programm.css
@@ -54,26 +54,33 @@
     min-height: 181px;
   }
 }.u-section-2 .u-sheet-1 {
+  min-height: 177px;
+}
+
+.u-section-2 .u-text-1 {
+  font-weight: 900;
+  margin: 60px auto;
+}.u-section-3 .u-sheet-1 {
   min-height: 505px;
 }
 
-.u-section-2 .u-list-1 {
+.u-section-3 .u-list-1 {
   margin-top: 60px;
   margin-bottom: 60px;
 }
 
-.u-section-2 .u-repeater-1 {
+.u-section-3 .u-repeater-1 {
   grid-auto-columns: 33.3333%;
   grid-template-columns: repeat(3, 33.3333%);
   min-height: 375px;
   grid-gap: 0px;
 }
 
-.u-section-2 .u-container-layout-1 {
+.u-section-3 .u-container-layout-1 {
   padding: 0 30px;
 }
 
-.u-section-2 .u-icon-1 {
+.u-section-3 .u-icon-1 {
   height: 220px;
   width: 220px;
   background-image: none;
@@ -81,15 +88,15 @@
   padding: 0;
 }
 
-.u-section-2 .u-text-1 {
+.u-section-3 .u-text-1 {
   margin: -46px auto 0;
 }
 
-.u-section-2 .u-text-2 {
+.u-section-3 .u-text-2 {
   margin: 22px 0 0;
 }
 
-.u-section-2 .u-btn-1 {
+.u-section-3 .u-btn-1 {
   font-size: 0.875rem;
   letter-spacing: 1px;
   border-style: solid;
@@ -98,11 +105,11 @@
   padding: 2px 0;
 }
 
-.u-section-2 .u-container-layout-2 {
+.u-section-3 .u-container-layout-2 {
   padding: 0 30px;
 }
 
-.u-section-2 .u-icon-2 {
+.u-section-3 .u-icon-2 {
   height: 220px;
   width: 220px;
   background-image: none;
@@ -110,15 +117,15 @@
   padding: 0;
 }
 
-.u-section-2 .u-text-3 {
+.u-section-3 .u-text-3 {
   margin: -46px auto 0;
 }
 
-.u-section-2 .u-text-4 {
+.u-section-3 .u-text-4 {
   margin: 22px 0 0;
 }
 
-.u-section-2 .u-btn-2 {
+.u-section-3 .u-btn-2 {
   font-size: 0.875rem;
   letter-spacing: 1px;
   border-style: solid;
@@ -127,11 +134,11 @@
   padding: 2px 0;
 }
 
-.u-section-2 .u-container-layout-3 {
+.u-section-3 .u-container-layout-3 {
   padding: 0 30px;
 }
 
-.u-section-2 .u-icon-3 {
+.u-section-3 .u-icon-3 {
   height: 220px;
   width: 220px;
   background-image: none;
@@ -139,15 +146,15 @@
   padding: 0;
 }
 
-.u-section-2 .u-text-5 {
+.u-section-3 .u-text-5 {
   margin: -46px auto 0;
 }
 
-.u-section-2 .u-text-6 {
+.u-section-3 .u-text-6 {
   margin: 22px 0 0;
 }
 
-.u-section-2 .u-btn-3 {
+.u-section-3 .u-btn-3 {
   font-size: 0.875rem;
   letter-spacing: 1px;
   border-style: solid;
@@ -157,7 +164,7 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-2 .u-repeater-1 {
+  .u-section-3 .u-repeater-1 {
     grid-auto-columns: 33.333333333333336%;
     grid-template-columns: repeat(3, 33.333333333333336%);
     min-height: 309px;
@@ -165,7 +172,7 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-2 .u-repeater-1 {
+  .u-section-3 .u-repeater-1 {
     grid-auto-columns: 50%;
     grid-template-columns: repeat(2, 50%);
     min-height: 710px;
@@ -173,70 +180,251 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-2 .u-repeater-1 {
+  .u-section-3 .u-repeater-1 {
     grid-auto-columns: 100%;
     grid-template-columns: 100%;
   }
 
-  .u-section-2 .u-container-layout-1 {
+  .u-section-3 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-2 {
+  .u-section-3 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-3 .u-container-layout-3 {
     padding-left: 10px;
     padding-right: 10px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-2 .u-sheet-1 {
+  .u-section-3 .u-sheet-1 {
     min-height: 1270px;
   }
 
-  .u-section-2 .u-repeater-1 {
+  .u-section-3 .u-repeater-1 {
     min-height: 1081px;
     grid-gap: 0px 0px;
   }
 
-  .u-section-2 .u-container-layout-1 {
+  .u-section-3 .u-container-layout-1 {
     padding-bottom: 30px;
   }
 
-  .u-section-2 .u-icon-1 {
+  .u-section-3 .u-icon-1 {
     margin-top: 0;
   }
 
-  .u-section-2 .u-container-layout-2 {
+  .u-section-3 .u-container-layout-2 {
     padding-bottom: 30px;
   }
 
-  .u-section-2 .u-icon-2 {
+  .u-section-3 .u-icon-2 {
     margin-top: 0;
   }
 
-  .u-section-2 .u-container-layout-3 {
+  .u-section-3 .u-container-layout-3 {
     padding-bottom: 30px;
   }
 
-  .u-section-2 .u-icon-3 {
+  .u-section-3 .u-icon-3 {
     margin-top: 0;
   }
-}.u-section-3 .u-sheet-1 {
+}.u-section-4 .u-sheet-1 {
   min-height: 177px;
 }
 
-.u-section-3 .u-text-1 {
+.u-section-4 .u-text-1 {
+  font-weight: 900;
+  margin: 60px auto;
+}.u-section-5 .u-sheet-1 {
+  min-height: 505px;
+}
+
+.u-section-5 .u-list-1 {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+.u-section-5 .u-repeater-1 {
+  grid-auto-columns: 33.3333%;
+  grid-template-columns: repeat(3, 33.3333%);
+  min-height: 375px;
+  grid-gap: 0px;
+}
+
+.u-section-5 .u-container-layout-1 {
+  padding: 0 30px;
+}
+
+.u-section-5 .u-icon-1 {
+  height: 220px;
+  width: 220px;
+  background-image: none;
+  margin: -44px auto 0;
+  padding: 0;
+}
+
+.u-section-5 .u-text-1 {
+  margin: -46px auto 0;
+}
+
+.u-section-5 .u-text-2 {
+  margin: 22px 0 0;
+}
+
+.u-section-5 .u-btn-1 {
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  margin: 18px auto 0;
+  padding: 2px 0;
+}
+
+.u-section-5 .u-container-layout-2 {
+  padding: 0 30px;
+}
+
+.u-section-5 .u-icon-2 {
+  height: 220px;
+  width: 220px;
+  background-image: none;
+  margin: -44px auto 0;
+  padding: 0;
+}
+
+.u-section-5 .u-text-3 {
+  margin: -46px auto 0;
+}
+
+.u-section-5 .u-text-4 {
+  margin: 22px 0 0;
+}
+
+.u-section-5 .u-btn-2 {
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  margin: 18px auto 0;
+  padding: 2px 0;
+}
+
+.u-section-5 .u-container-layout-3 {
+  padding: 0 30px;
+}
+
+.u-section-5 .u-icon-3 {
+  height: 220px;
+  width: 220px;
+  background-image: none;
+  margin: -44px auto 0;
+  padding: 0;
+}
+
+.u-section-5 .u-text-5 {
+  margin: -46px auto 0;
+}
+
+.u-section-5 .u-text-6 {
+  margin: 22px 0 0;
+}
+
+.u-section-5 .u-btn-3 {
+  font-size: 0.875rem;
+  letter-spacing: 1px;
+  border-style: solid;
+  text-transform: uppercase;
+  margin: 18px auto 0;
+  padding: 2px 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-5 .u-repeater-1 {
+    grid-auto-columns: 33.333333333333336%;
+    grid-template-columns: repeat(3, 33.333333333333336%);
+    min-height: 309px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-5 .u-repeater-1 {
+    grid-auto-columns: 50%;
+    grid-template-columns: repeat(2, 50%);
+    min-height: 710px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-repeater-1 {
+    grid-auto-columns: 100%;
+    grid-template-columns: 100%;
+  }
+
+  .u-section-5 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-5 .u-container-layout-3 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 1270px;
+  }
+
+  .u-section-5 .u-repeater-1 {
+    min-height: 1081px;
+    grid-gap: 0px 0px;
+  }
+
+  .u-section-5 .u-container-layout-1 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-5 .u-icon-1 {
+    margin-top: 0;
+  }
+
+  .u-section-5 .u-container-layout-2 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-5 .u-icon-2 {
+    margin-top: 0;
+  }
+
+  .u-section-5 .u-container-layout-3 {
+    padding-bottom: 30px;
+  }
+
+  .u-section-5 .u-icon-3 {
+    margin-top: 0;
+  }
+}.u-section-6 .u-sheet-1 {
+  min-height: 177px;
+}
+
+.u-section-6 .u-text-1 {
   font-weight: 900;
   margin: 49px auto 0;
 }
 
-.u-section-3 .u-btn-1 {
+.u-section-6 .u-btn-1 {
   --radius: 50px;
   font-weight: 700;
   text-transform: uppercase;
