--- a/Startseite.css
+++ b/Startseite.css
@@ -4,12 +4,12 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 581px;
+  min-height: 717px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 60px;
 }
 
 .u-section-1 .u-layout-cell-1 {
@@ -46,7 +46,7 @@
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 377px;
+    min-height: 489px;
   }
 
   .u-section-1 .u-layout-cell-1 {
@@ -64,7 +64,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 265px;
+    min-height: 377px;
   }
 
   .u-section-1 .u-layout-cell-1 {
@@ -91,7 +91,7 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 498px;
+    min-height: 610px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -114,7 +114,7 @@
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 313px;
+    min-height: 425px;
   }
 
   .u-section-1 .u-text-1 {
